--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.8",
-    "@storybook/addon-docs": "^9.1.10",
-    "@storybook/react-vite": "^9.1.10",
+    "@storybook/addon-docs": "8.4.7",
+    "@storybook/react-vite": "8.4.7",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/react": "^16.0.0",
@@ -54,14 +54,13 @@
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-storybook": "9.1.10",
     "patch-package": "^8.0.1",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sass": "^1.93.2",
-    "storybook": "^9.1.10",
+    "storybook": "8.4.7",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.3",
     "vite": "^5.4.8",
